[package]
name = "rlox-iii"
version = "0.1.0"
authors = ["Uchio Kondo <udzura@udzura.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
debug_all = ["trace_execution", "print_code"]
trace_execution = []
print_code = []